dts/exynos9830: bring back min freq as default for Little core
Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/arch/arm64/boot/dts/exynos/exynos9830.dts
+++ b/arch/arm64/boot/dts/exynos/exynos9830.dts
@@ -14478,7 +14478,7 @@
 			cal-id = <0xb040002>;
 			dm-type = <0x00>;
 			max-freq = <0x202290>;  // <0x1e8c50>
-			min-freq = <0x2c6f0>;   // <0x6be90>
+			min-freq = <0x6be90>;   // <0x6be90>
 			pm_qos-min-class = <0x03>;
 			pm_qos-max-class = <0x04>;
 			user-default-qos = <0xc4c70>;
