drivers: Introduce brand new kernel gaming mode [SQUASH to v0.4] How to trigger gaming mode? Just open a game that is supported in games list How to exit? Kill the game from recents, or simply back to homescreen
What does this gaming mode do?
- It limits big cluster maximum frequency to 2,0GHz, and little cluster
  to values matching GPU frequencies as below:
+ 338MHz: 455MHz
+ 385MHz and above: 1053MHz
- As for the cluster freq limits, it overcomes heating issue while playing
  heavy games, as well as saves battery juice

Big thanks to [kerneltoast] for the following commits on his wahoo kernel
kerneltoast/android_kernel_google_wahoo@5ac1e81
kerneltoast/android_kernel_google_wahoo@e13e2c4

Gaming control's idea was based on these

Signed-off-by: Diep Quynh <remilia.1505@gmail.com>

commit: https://github.com/xxmustafacooTR/android_kernel_samsung_universal9810/commit/bf45a4c95f9f4b89d9654fbfc55da70be52aeb2c

Adapted into S20/N20 Sasmung GAlaxy models by XDA@nalas

Squach added to game control version 0.4.

Commits included:
- drivers: Introduce brand new kernel gaming mode
- gaming_control: Remove task kill check
- gaming_control: Adapt PM QoS implementation
- gaming_control: more controls
- gaming_control: extern freqs
- gaming_control: optimize
- gaming_control: change default freq settings
- gaming_control: add gpu min/max control
- gaming_control: idle battery while gaming feature

Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/arch/arm64/configs/ts_defconfig
+++ b/arch/arm64/configs/ts_defconfig
@@ -181,5 +181,8 @@ CONFIG_NET_UDP_TUNNEL=y
 ## BATTERY SAVER
 CONFIG_BATTERY_SAVER=y
 
+## GAME CONTROL
+CONFIG_GAMING_CONTROL=y
+
 CONFIG_DEBUG_SECTION_MISMATCH=y
 
