--- a/arch/arm64/configs/ts_defconfig
+++ b/arch/arm64/configs/ts_defconfig
@@ -19,6 +19,7 @@ CONFIG_MALI_KUTF=y
 # CONFIG_EXYNOS_SNAPSHOT_DM is not set
 
 ## GPU
+# CONFIG_MALI_EXYNOS_WAKEUP_CLOCK_WA is not set
 CONFIG_MALI_DDK_VERSION=y
 # CONFIG_MALI_VALHALL_R17P0 is not set
 # CONFIG_MALI_VALHALL_R19P0 is not set
