ems: multi_load and energy_step - separately clusters
Added settings for some features separately for each one core 0, 4 & 6.
Now we can make it separately.

Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/arch/arm64/configs/ts_defconfig
+++ b/arch/arm64/configs/ts_defconfig
@@ -72,6 +72,9 @@ CONFIG_LITTLE_CPU_MASK=15
 CONFIG_BIG_CPU_MASK=48
 CONFIG_PRIME_CPU_MASK=192
 
+## EMS separately clusters
+CONFIG_EMS_CLUSTERS=y
+
 ## WAKELOCKS
 CONFIG_BOEFFLA_WL_BLOCKER=y
 
