--- a/arch/arm64/configs/ts_defconfig
+++ b/arch/arm64/configs/ts_defconfig
@@ -186,5 +186,16 @@ CONFIG_NET_UDP_TUNNEL=y
 ## BATTERY SAVER
 CONFIG_BATTERY_SAVER=y
 
+## NETWORK SIGNAL GURU
+CONFIG_IP_SCTP=y
+# CONFIG_SCTP_DBG_OBJCNT is not set
+CONFIG_SCTP_DEFAULT_COOKIE_HMAC_MD5=y
+# CONFIG_SCTP_DEFAULT_COOKIE_HMAC_SHA1 is not set
+# CONFIG_SCTP_DEFAULT_COOKIE_HMAC_NONE is not set
+CONFIG_SCTP_COOKIE_HMAC_MD5=y
+# CONFIG_SCTP_COOKIE_HMAC_SHA1 is not set
+CONFIG_INET_SCTP_DIAG=y
+
+## MISMATCH CONFIG
 CONFIG_DEBUG_SECTION_MISMATCH=y
 
