--- a/arch/arm64/configs/ts_defconfig
+++ b/arch/arm64/configs/ts_defconfig
@@ -1,6 +1,6 @@
 ## GENERAL THUNDERSTORMS CONFIG
 
-CONFIG_LOCALVERSION="-ThunderStormS-v2.2-DEVA9-OneUI4"
+CONFIG_LOCALVERSION="-ThunderStormS-v2.3-HVC6-OneUI4.1"
 CONFIG_LOCALVERSION_AUTO=n
 
 ## MAIN
@@ -43,6 +43,19 @@ CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
+
+## HZ TICK
+# CONFIG_HZ_50 is not set
+# CONFIG_HZ_100 is not set
+CONFIG_HZ_200=y
+CONFIG_HZ_250 is not set
+# CONFIG_HZ_300 is not set
+# CONFIG_HZ_1000 is not set
+CONFIG_HZ=200
+
+## NOATIME FOR MOUNT
+CONFIG_DEFAULT_MNT_NOATIME=y
+# CONFIG_DEFAULT_MNT_RELATIME is not set
 
 ## CIFS
 CONFIG_NETWORK_FILESYSTEMS=y
@@ -140,8 +153,14 @@ CONFIG_USB_SERIAL_CP210X=y
 ## FRANDOM
 CONFIG_FRANDOM=y
 
+## F2FS DEBUG
+# CONFIG_F2FS_SEC_BLOCK_OPERATIONS_DEBUG is not set
+
+## STORAGE LOGS
+# CONFIG_BLOCK_SUPPORT_STLOG is not set
+
 ## VM MAX READAHEAD
-CONFIG_VM_MAX_READAHEAD=0
+CONFIG_VM_MAX_READAHEAD=128
 
 ## IO Schedulers
 CONFIG_IOSCHED_NOOP=y
@@ -167,8 +186,8 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 
-## BLK_DEV_LOOP_MIN_COUNT -fix mount in TWRP
-CONFIG_BLK_DEV_LOOP_MIN_COUNT=32
+## BLK_DEV_LOOP_MIN_COUNT -fix mount in TWRP : 32
+CONFIG_BLK_DEV_LOOP_MIN_COUNT=24
 
 ## POWERSUSPEND
 CONFIG_POWERSUSPEND=y
@@ -185,6 +204,90 @@ CONFIG_NET_UDP_TUNNEL=y
 
 ## BATTERY SAVER
 CONFIG_BATTERY_SAVER=y
+
+## Virtual Machine for Exynos
+CONFIG_VIRTUALIZATION=y
+CONFIG_KVM=y
+CONFIG_PREEMPT_NOTIFIERS=y
+CONFIG_ARM64_ERRATUM_834220=y
+CONFIG_MMU_NOTIFIER=y
+CONFIG_HAVE_KVM_IRQCHIP=y
+CONFIG_HAVE_KVM_IRQFD=y
+CONFIG_HAVE_KVM_IRQ_ROUTING=y
+CONFIG_HAVE_KVM_EVENTFD=y
+CONFIG_KVM_MMIO=y
+CONFIG_HAVE_KVM_MSI=y
+CONFIG_HAVE_KVM_CPU_RELAX_INTERCEPT=y
+CONFIG_KVM_VFIO=y
+CONFIG_HAVE_KVM_ARCH_TLB_FLUSH_ALL=y
+CONFIG_KVM_GENERIC_DIRTYLOG_READ_PROTECT=y
+CONFIG_KVM_COMPAT=y
+CONFIG_HAVE_KVM_IRQ_BYPASS=y
+CONFIG_KVM_ARM_HOST=y
+CONFIG_KVM_ARM_PMU=y
+CONFIG_ARM64_VHE=y
+# CONFIG_VHOST_NET is not set
+# CONFIG_VHOST_CROSS_ENDIAN_LEGACY is not set
+
+# KVM Guest
+CONFIG_KVM_GUEST=y
+CONFIG_KVM_DEBUG_FS=y
+CONFIG_NET=y
+CONFIG_NET_CORE=y
+CONFIG_NETDEVICES=y
+CONFIG_BLOCK=y
+CONFIG_BLK_DEV=y
+CONFIG_NETWORK_FILESYSTEMS=y
+CONFIG_INET=y
+CONFIG_TTY=y
+## CONFIG_SERIAL_8250=y
+## CONFIG_SERIAL_8250_CONSOLE=y
+CONFIG_IP_PNP=y
+CONFIG_IP_PNP_DHCP=y
+CONFIG_BINFMT_ELF=y
+CONFIG_PCI=y
+CONFIG_PCI_MSI=y
+CONFIG_DEBUG_KERNEL=y
+CONFIG_HYPERVISOR_GUEST=y
+CONFIG_PARAVIRT=y
+CONFIG_VIRTIO=y
+CONFIG_VIRTIO_PCI=y
+CONFIG_VIRTIO_BLK=y
+CONFIG_VIRTIO_CONSOLE=y
+CONFIG_VIRTIO_NET=y
+CONFIG_9P_FS=y
+CONFIG_NET_9P=y
+CONFIG_NET_9P_VIRTIO=y
+CONFIG_SCSI_LOWLEVEL=y
+CONFIG_SCSI_VIRTIO=y
+CONFIG_VIRTIO_INPUT=y
+CONFIG_DRM_VIRTIO_GPU=y
+
+# Docker
+CONFIG_BRIDGE=y
+CONFIG_BRIDGE_NETFILTER=y
+CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
+CONFIG_NETFILTER_XT_MATCH_IPVS=y
+## CONFIG_CFQ_GROUP_IOSCHED=y
+CONFIG_BLK_CGROUP=y
+CONFIG_BLK_DEV_THROTTLING=y
+CONFIG_CGROUP_PERF=y
+CONFIG_CGROUP_HUGETLB=y
+CONFIG_CGROUP_NET_PRIO=y
+CONFIG_IP_VS=y
+CONFIG_IP_VS_NFCT=y
+CONFIG_IP_VS_PROTO_TCP=y
+CONFIG_IP_VS_PROTO_UDP=y
+CONFIG_IP_VS_RR=y
+CONFIG_SECURITY_APPARMOR=y
+CONFIG_EXT3_FS_XATTR=y
+CONFIG_EXT3_FS_POSIX_ACL=y
+CONFIG_VXLAN=y
+CONFIG_BRIDGE_VLAN_FILTERING=y
+CONFIG_IPVLAN=y
+CONFIG_MACVLAN=y
+CONFIG_DUMMY=y
+CONFIG_OVERLAY_FS=y
 
 ## NETWORK SIGNAL GURU
 CONFIG_IP_SCTP=y
