defconfigs: Import Pixel 4's cpuset Signed-off-by: Stephen Xian <stevexian56@gmail.com>
org commit: https://github.com/Laulan56/android_kernel_xiaomi_sm8150/commit/a7f7e7156ab9d81b5551f857e7135b21e59083f1

Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/arch/arm64/configs/ts_defconfig
+++ b/arch/arm64/configs/ts_defconfig
@@ -299,6 +299,16 @@ CONFIG_SCTP_COOKIE_HMAC_MD5=y
 # CONFIG_SCTP_COOKIE_HMAC_SHA1 is not set
 CONFIG_INET_SCTP_DIAG=y
 
+## CPU SET SETTINGS
+CONFIG_CPUSET_ASSIST=y
+CONFIG_CPUSET_BG="0-1"
+CONFIG_CPUSET_AUDIO_APP="1-2"
+CONFIG_CPUSET_CAMERA="0-3,6-7"
+CONFIG_CPUSET_FG="0-3,5-6"
+CONFIG_CPUSET_RESTRICTED="0-3"
+CONFIG_CPUSET_TOP_APP="0-7"
+CONFIG_CPUSET_SYSTEM_BG="0-3"
+
 ## MISMATCH CONFIG
 CONFIG_DEBUG_SECTION_MISMATCH=y
 
