ts_defconfig: added CPU Boost by Sultan K
Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/arch/arm64/configs/ts_defconfig
+++ b/arch/arm64/configs/ts_defconfig
@@ -215,6 +215,7 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_BOOST=y
 
 ## BLK_DEV_LOOP_MIN_COUNT -fix mount in TWRP : 32
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=24
